Add CSS for colors and fonts and over-ride Bootstrap theme

--- a/source/stylesheets/config/_variables.css.scss
+++ b/source/stylesheets/config/_variables.css.scss
@@ -28,8 +28,8 @@ $brand-color: #D23333;
 
 $red: #EE5F5B;
 $blue: #469AE0;
-$yellow: #FDB631;
-$orange: #E67E22;
+$yellow: #FFFF00;
+$orange: #FF8000;
 $green: #32B796;
 
 // Gray scale
@@ -38,3 +38,4 @@ $gray-dark:    lighten(#000, 20%);   // #333
 $gray:         lighten(#000, 33.5%); // #555
 $gray-light:   lighten(#000, 46.7%); // #777
 $gray-lighter: lighten(#000, 93.5%); // #eee
+
